调整全局配置文件

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico">
 		<title><%= htmlWebpackPlugin.options.isProd ? '' : 'dev - '  %>开发者中心</title>
+		<script src="config.js" charset="UTF-8"></script>
 		<% if(htmlWebpackPlugin.options.isProd){ %>
 		<link rel="stylesheet" href="https://cdn.staticfile.org/nprogress/0.2.0/nprogress.min.css" />
 		<link rel="stylesheet" href="https://cdn.staticfile.org/element-ui/2.8.2/theme-chalk/index.css" />
